main/interfaces/Plush/templates/static/stylesheets/plush-default.css
body {
    background-color: #B1B1B1;
    font-family: arial, "lucida console", sans-serif;
    margin: 0px;
    padding: 0px;
	padding-bottom: 10px;
}
select {
    color: #000;
    background-color:#E0E0E0;
    border:0px;
    padding:0px;
}

ul, li, p, h1, h2, h3 { margin: 0; padding: 0; list-style: none; }

.new_release_link {
    color: darkgreen;
}
.pointer {
    cursor:pointer;
}
.clear {
	clear: both;
}
#warning_message {
    color: darkred;
	font-weight: bold;
}
#new_release {
	color: green;
	font-weight: bold;
}

/* for jQuery Tooltip Plugin */
#tooltip {
    position: absolute;
    z-index: 3000;
    border: 1px solid #111;
    background-color: lightyellow;
    color:#000;
    font-size: 11px !important;
    padding: 5px;
    opacity: 0.85;
}
#tooltip h3, #tooltip div { margin: 0; }


/* for jQuery Pagination Plugin */
.pagination-perpage {
	float:left;
}
.pagination {
	font-size: 100%;
	margin-left: -15px;
	margin-top: -15px;
	float:left;
}
.pagination a {
    text-decoration: none;
	border: solid 1px #B1B1B1;
	background:#E0E0E0;
	color: #000;
	cursor: pointer;
}
.pagination a:hover {
	border: solid 1px #000;
}
.pagination a, .pagination span {
    display: block;
    float: left;
    padding: 0.3em 0.5em;
    margin-right: 5px;
	margin-bottom: 5px;
}
.pagination .current {
    background: #FFF;
    color: #000;
	border: solid 1px #000;
}
.pagination .current.prev, .pagination .current.next{
	color:#B1B1B1;
	border-color:#B1B1B1;
	background:#E0E0E0;
}
.pagination .loading{
    background: #FFF url(../images/plush-default/spinner.gif) 50% 50% no-repeat;
}


/* ---------------------------------------------------------------------------------------------------------------
------------------------------------------------------------------------------------------------------------------

    queue + history overall container

------------------------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------------------- */

.box_fatbottom {
    height:37px;
    font-size: 66%;
    color: #606060;
    text-align:center;
    background: url(../images/plush-default/tile_qh_bottom.png) 0 0 repeat-x;
}
.left_stats, .right_stats {
    padding:12px 16px 0 20px;
    cursor:default;
}
.history_stats div {
    padding:13px 16px 0 20px;
	margin-bottom: -4px;
}
#history_stats {
	padding-top:16px;
}
.box_fatbottom .left_stats {
    float:left;
}
.box_fatbottom .right_stats {
    float:right;
}
.box_fatbottom strong {
    color: #000;
}

.box_banner_menu {
    float:right;
    list-style:none;
    display:inline;
    margin: 10px 0;
    padding: 0;
}
.box_banner_menu li {
    float:right;
}

/* overall pause/resume */
#pause_int {
	color: white;
	padding-right:10px;
	font-size:small;
}
.q_menu_pause {
    margin-right:6px;
    padding-right:32px;
    padding-bottom:24px;
    cursor:pointer;
    background: url(../images/plush-default/sprite-main.png) no-repeat top left;
}

/* keep .h_menu_verbose and .h_menu_purge up with the above (buttons top-right of history) */
.sprite_h_purge {
    background: url(../images/plush-default/sprite-main.png) no-repeat top left;
    margin:6px;
    padding-right:28px;
    padding-bottom:24px;
    cursor:pointer;
    display:none;
}


#page-wrap { width: 95%; margin: 0px auto; }
.box_banner_hr {
    background: #cfcfcf url(../images/plush-default/tile_qh_seperator.png) 0 0 repeat-x;
    height:4px;
}
.box_banner_history {background-image: url(../images/plush-default/tile_history.png); background-repeat: repeat-x; height: 51px; width: 100%; background-position: -2px 0;}
.box_banner_history h1 { color:#c7c7c7; font-size:90%; font-weight:normal; float:left; margin: 17px 0px 0px 16px; cursor:default; }
.box_banner_r {
    height:52px;
    margin-left:1px;
}
#hdr-queue { background-image: url(../images/plush-default/tile_queue.png); background-position: 4px 0px; background-repeat: repeat-x; height: 55px; }
#hdr-queue .logo { height: 55px; width: 178px; float: left;}
.sprite_hdr_queue { background: url(../images/plush-default/sprite-main.png) no-repeat top left; }
#hdr-queue .logo h1 { color:#c7c7c7; font-size:90%; font-weight:normal; margin: 22px 0px 0px 20px; cursor:default; }
#queue-buttons { float: right; background-image: url(../images/plush-default/queue_bg.png); background-position: top right; background-repeat: no-repeat; height: 35px; padding-top: 20px;}
#queue-buttons li { float:left; }
#queue-wrap { background-color: #cfcfcf; padding: 0 4px; }
#btm-wrapper { height: 9px; background-color: #cfcfcf; clear:both;}
#btm-wrapper .sprite_btm_corner_right { float:right; background-image: url(../images/plush-default/sprite-main.png); background-repeat:no-repeat; height: 9px; width: 12px;}
#btm-wrapper .sprite_btm_corner_left { float:left; background-image: url(../images/plush-default/sprite-main.png); background-repeat: no-repeat; height: 9px; width: 12px; }




/* ---------------------------------------------------------------------------------------------------------------
------------------------------------------------------------------------------------------------------------------

    box header, above queue (sabnzbd logo & stats)

------------------------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------------------- */
.centerpiece {
    width:320px;
    margin-left:auto;
    margin-right:auto;
}
.sprite_sabnzbdplus_logo {
	margin: 10px 0px -12px 0px;
    background: url(../images/plush-default/sprite-main.png) no-repeat;
}
#queue_logo {
    padding-left:50px;
    padding-right:50px;
    padding-bottom:19px;
    height: 40px;
    float:left;
}
/* ... */

